# suri-coder

./: .gitignore  .mcp.json  CLAUDE.md  biome.json  docker-compose.dev.yml  electron-builder.ts  figma-viewer.html  package.json  pnpm-lock.yaml  pyrightconfig.json  skills-lock.json  tsconfig.base.json  turbo.json
apps/backend/: .env.example  alembic.ini  package.json  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 003495c5f0c7_add_github_accounts_and_project_.py  24876a7f07a7_unified_session_manager_phase1a.py  518662d031e3_add_github_accounts_and_project_.py  6dcca07134ba_add_ticket_system_tables.py  751c1b967f70_migrate_brainstorm_to_session_events.py  7fb59e922a17_add_step_lifecycle_fields_and_step_.py  828407979b63_initial_schema.py
apps/backend/app/: config.py  database.py  main.py  seed.py  worker.py
apps/backend/app/models/: __init__.py  agent_config.py  base.py  brainstorm_message.py  enums.py  figma.py  github_account.py  notification.py  project.py  (+12 more)
apps/backend/tests/: conftest.py  test_agent_runner.py  test_agents.py  test_approval_flow.py  test_auth.py  test_brainstorm.py  test_brainstorm_service.py  test_health.py  test_notifications_router.py  test_notifications_service.py  test_notifications_ws.py  test_project_seeder.py  test_projects.py  test_prompt_builder.py  test_review_flow.py  test_session_manager.py  test_spec_router.py  test_spec_service.py  test_step_lifecycle_models.py  test_strategy_registry.py  test_templates.py  test_tickets.py  test_websocket.py  test_workflow_engine.py  test_workspace_manager.py
(+327 files in other folders)
